--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="icon" href="img/TTPS LOGO.jpg" type="image/png">
         <title>Tamilnadu Telugu People Foundation</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -29,7 +29,7 @@
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
-						<a class="navbar-brand logo_h" href="/"><img src="img/tntpf-logo.jpeg" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/TTPS LOGO.jpg" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -38,7 +38,7 @@
 
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://rzp.io/l/n3mHJ6U" target="_blank">Donate</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
@@ -59,7 +59,7 @@
             	<div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
       				<div class="container">
       					<div class="banner_content text-center">
-                  <img src="img/tntpf-logo.jpeg" alt="Tamilnadu Telugu People Foundation" width="20%">
+                  <img src="img/TTPS LOGO.jpg" alt="Tamilnadu Telugu People Foundation" width="20%">
       						<h5><i>We are here to help Tamilnadu Telugu People</i></h5>
       						<h3>Tamilnadu Telugu People <br>Foundation</h3>
       						<!-- <a class="main_btn" href="#donate">Donate</a> -->
@@ -198,7 +198,7 @@
                   <i class="lnr lnr-diamond"></i>
                   <h4>Support</h4>
                   <p>We invite Telugu people to join in the organization as volunteers to identify and list out the Telugu people, who are living in Tamil Nadu since many generations.
-</p>
+                  </p>
                 </div>
               </div>
             </div>
@@ -248,224 +248,46 @@
           		<div class="main_title">
           			<h2>Image Gallery</h2>
           		</div>
-              <div class="row gallery_inner imageGallery1">
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf1.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf1.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
+              <div class="row">
+               <div class="col-md-6 col-sm-6 gallery_item">
+                <div class="gallery">
+                <div class="gallery_img">
+                  <img src="img/home-gallery/tntpf1.jpg" alt="">
+                   <div class="hover">
+                     <a class="light" href="womans-day.html"><i class="fa fa-expand"></i></a>
+                   </div>
+                     <div class="desc">WOMENS DAY CELEBRATIONS AT HEAD OFFICE NANDANAM ON 08-03-2021 </div>
                 </div>
+              </div>
+              </div>
 
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf2.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf2.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
+             <div class="col-md-6 col-sm-6 gallery_item">
+                <div class="gallery">
+                <div class="gallery_img">
+                  <img src="img/home-gallery/tntpf3.jpg" alt="">
+                   <div class="hover">
+                     <a class="light" href="home-gellery.html"><i class="fa fa-expand"></i></a>
+                   </div>
+                     <div class="desc"> Gallery </div>
                 </div>
+              </div>
+              </div>
 
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf3.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf3.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
+               <div class="col-md-6 col-sm-6 gallery_item">
+                <div class="gallery">
+                <div class="gallery_img">
+                  <img src="img/home-gallery/tntpf14.jpg" alt="">
+                   <div class="hover">
+                     <a class="light" href="covid-image.html"><i class="fa fa-expand"></i></a>
+                   </div>
+                     <div class="desc">TNTPS 2020 COVID 19 TIME SERVICE </div>
                 </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf4.png" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf4.png"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf5.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf5.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf6.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf6.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf7.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf7.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf8.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf8.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                    <div class="gallery_img">
-                        <img src="img/home-gallery/tntpf9.jpg" alt="">
-                        <div class="hover">
-                          <a class="light" href="img/home-gallery/tntpf9.jpg"><i class="fa fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf10.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf10.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf11.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf11.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf12.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf12.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf13.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf13.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf14.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf14.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf15.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf15.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf16.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf16.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf17.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf17.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf18.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf18.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf19.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf19.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf20.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf20.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf21.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf21.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf22.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf22.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6 gallery_item">
-                  <div class="gallery_img">
-                    <img src="img/home-gallery/tntpf23.jpg" alt="">
-                    <div class="hover">
-                      <a class="light" href="img/home-gallery/tntpf23.jpg"><i class="fa fa-expand"></i></a>
-                    </div>
-                  </div>
-                </div>
-
+              </div>
               </div>
             </div>
+            </div>
+            </div>
           </section>
-
-
 
         <!--================Event Area =================-->
         <section class="event_area p_120" id="news">
@@ -555,12 +377,24 @@
         <section class="contact_area p_120" id="contact">
           <div class="container">
             <div class="main_title">
-              <h2>Facebook Page Updates</h2>
-              <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore">
-                  <a href="https://www.facebook.com/tntpf1/">Tamilnadu Telugu People Foundation</a>
-                </blockquote>
+             <h2>Facebook Page Updates</h2>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-sm-6">
+                <div class="video-responsive">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/e6qON7SQMFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
               </div>
+
+              <div class="col-md-6 col-sm-6">
+                  <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                  <blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore">
+                  <a href="https://www.facebook.com/tntpf1/">Tamilnadu Telugu People Foundation</a>
+                  </blockquote>
+                </div>
+              </div>
+
+            </div>
           </div>
         </section>
 
