--- a/Nandanam-img.html
+++ b/Nandanam-img.html
@@ -45,7 +45,7 @@
 
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://rzp.io/l/n3mHJ6U" target="_blank">Donate</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
@@ -64,104 +64,113 @@
         <!-- -------------------gellery---------------- -->
         <div class="container">
           <div class="main_title">
-            <h2>Actor.Kushboo visited TNTPF Head Office Nandanam On 20-03-2021</h2>
+            <h2>TNTPF Head Office Opening At Nandanam On 03-03-2021 </h2>
           </div>
+              <a class="main_btn" href="/index.html" target="_blank">Back</a>
+              <br><br>
           <div class="row">
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/eleven.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/eleven.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam2.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam2.jpeg" alt="Another alt text">
                 </a>
               </div>
                    
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/thirteen.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/thirteen.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam1.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam1.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/eight.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/eight.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam3.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam3.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/first.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/first.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam4.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam4.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/five.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/five.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam5.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam5.jpeg" alt="Another alt text">
+                </a>
+              </div>
+
+            <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+                  data-image="img/Nandanam-img/Nandanam6.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam6.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/three.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/three.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam8.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam8.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/nine.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/nine.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam9.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam9.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/second.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/second.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam10.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam10.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/seven.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/seven.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam11.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam11.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/six.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/six.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam14.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam14.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/ten.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/ten.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam15.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam15.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/twele.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/twele.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam12.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam12.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/woman-day-img/four.JPG" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/woman-day-img/four.JPG" alt="Another alt text">
+                  data-image="img/Nandanam-img/Nandanam13.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Nandanam-img/Nandanam13.jpeg" alt="Another alt text" >
                 </a>
               </div>
 
-            </div>
+           </div>
 
-
-            <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
+            aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
@@ -184,6 +193,8 @@
             </div>
           </div>
         </div>
+        <!--================End Event Area =================-->
+
 
         <!--================Event Area =================-->
         <section class="event_area p_120" id="donate">
@@ -364,27 +375,27 @@ $(document)
   });
 
 // build key actions
-  $(document)
-    .keydown(function (e) {
-      switch (e.which) {
-        case 37: // left
-          if ((modalId.data('bs.modal') || {})._isShown && $('#show-previous-image').is(":visible")) {
-            $('#show-previous-image')
-              .click();
-          }
-          break;
+$(document)
+  .keydown(function (e) {
+    switch (e.which) {
+      case 37: // left
+        if ((modalId.data('bs.modal') || {})._isShown && $('#show-previous-image').is(":visible")) {
+          $('#show-previous-image')
+            .click();
+        }
+        break;
 
-        case 39: // right
-          if ((modalId.data('bs.modal') || {})._isShown && $('#show-next-image').is(":visible")) {
-            $('#show-next-image')
-              .click();
-          }
-          break;
+      case 39: // right
+        if ((modalId.data('bs.modal') || {})._isShown && $('#show-next-image').is(":visible")) {
+          $('#show-next-image')
+            .click();
+        }
+        break;
 
-        default:
-          return; // exit this handler for other keys
-      }
-      e.preventDefault(); // prevent the default action (scroll / move caret)
+      default:
+        return; // exit this handler for other keys
+    }
+    e.preventDefault(); // prevent the default action (scroll / move caret)
   });
 
   </script>
