--- a/index.html
+++ b/index.html
@@ -284,6 +284,19 @@
                 </div>
               </div>
               </div>
+
+              <div class="col-md-6 col-sm-6 gallery_item">
+                <div class="gallery">
+                <div class="gallery_img">
+                  <img src="img/Nandanam-img/Nandanam14.jpeg" alt="" style="height: 268px;">
+                   <div class="hover">
+                     <a class="light" href="Nandanam-img.html"><i class="fa fa-expand"></i></a>
+                   </div>
+                     <div class="desc">TNTPF Head Office Opening At Nandanam On 03-03-2021 </div>
+                </div>
+              </div>
+              </div>
+
             </div>
             </div>
             </div>
@@ -363,9 +376,61 @@
                 </div>
               </div>
 
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr8.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr8.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr9.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr9.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr10.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr10.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr11.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr11.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr12.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr12.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr13.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr13.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
             </div>
-
-
 
             <div class="clearfix"></div>
             <br>
