--- a/Nandanam-img.html
+++ b/Nandanam-img.html
@@ -66,7 +66,7 @@
           <div class="main_title">
             <h2>TNTPF Head Office Opening At Nandanam On 03-03-2021 </h2>
           </div>
-              <a class="main_btn" href="/index.html" target="_blank">Back</a>
+              <a class="main_btn" href="/index.html">Back</a>
               <br><br>
           <div class="row">
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
