--- a/Office Meeting.html
+++ b/Office Meeting.html
@@ -64,67 +64,95 @@
         <!-- -------------------gellery---------------- -->
         <div class="container">
           <div class="main_title">
-            <h2>Actor.Kushboo visited TNTPF Head Office Nandanam On 20-03-2021 </h2>
+            <h2>TNTPS Office Bearers Meeting On 03-04-2021 </h2>
           </div>
               <a class="main_btn" href="/index.html">Back</a>
               <br><br>
           <div class="row">
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office1.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office1.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor1.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor1.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office2.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office2.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor2.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor2.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office3.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office3.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor3.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor3.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office4.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office4.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor4.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor4.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office5.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office5.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor5.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor5.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office6.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office6.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor6.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor6.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office7.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office7.jpeg" alt="Another alt text">
                 </a>
               </div>
 
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
-                  data-image="img/Actor.Kushboo-img/Actor7.jpeg" data-target="#image-gallery">
-                  <img class="img-thumbnail" src="img/Actor.Kushboo-img/Actor7.jpeg" alt="Another alt text">
+                  data-image="img/Office-img/Office8.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office8.jpeg" alt="Another alt text">
                 </a>
               </div>
-                   
+
+              <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+                  data-image="img/Office-img/Office9.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office9.jpeg" alt="Another alt text">
+                </a>
+              </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+                  data-image="img/Office-img/Office10.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office10.jpeg" alt="Another alt text">
+                </a>
+              </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+                  data-image="img/Office-img/Office11.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office11.jpeg" alt="Another alt text">
+                </a>
+              </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+                  data-image="img/Office-img/Office1.jpeg" data-target="#image-gallery">
+                  <img class="img-thumbnail" src="img/Office-img/Office1.jpeg" alt="Another alt text">
+                </a>
+              </div>
+
            </div>
 
             <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
