--- a/index.html
+++ b/index.html
@@ -297,6 +297,31 @@
               </div>
               </div>
 
+              <div class="col-md-6 col-sm-6 gallery_item">
+                <div class="gallery">
+                <div class="gallery_img">
+                  <img src="img/Actor.Kushboo-img/Actor2.jpeg" alt=""style="height: 268px;">
+                   <div class="hover">
+                     <a class="light" href="actor.kushabo.html"><i class="fa fa-expand"></i></a>
+                   </div>
+                     <div class="desc">Actor.Kushboo visited TNTPF Head Office Nandanam On 20-03-2021 </div>
+                </div>
+              </div>
+              </div>
+
+              <div class="col-md-6 col-sm-6 gallery_item">
+                <div class="gallery">
+                <div class="gallery_img">
+                  <img src="img/Office-img/Office3.jpeg" alt=""style="height: 268px;">
+                   <div class="hover">
+                     <a class="light" href="Office Meeting.html"><i class="fa fa-expand"></i></a>
+                   </div>
+                     <div class="desc">TNTPS Office Bearers Meeting On 03-04-2021 </div>
+                </div>
+              </div>
+              </div>
+
+
             </div>
             </div>
             </div>
