--- a/Nandanam-img.html
+++ b/Nandanam-img.html
@@ -45,7 +45,7 @@
 
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://rzp.io/l/n3mHJ6U" target="_blank">Donate</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
